--- a/SocialStrata/www/index.html
+++ b/SocialStrata/www/index.html
@@ -8,19 +8,19 @@
     <link href="css/ionic.app.css" rel="stylesheet">
     head
 </head>
-<body ng-app="SocialStrata">
+<body ng-app="app">
 
-<ion-pane>
-    <ion-header-bar class="bar-stable">
-        <h1 class="title">Social Strata App</h1>
-    </ion-header-bar>
-    <ion-content>
-    </ion-content>
-</ion-pane>
+<ion-nav-bar class="bar-stable">
+    <ion-nav-back-button>
+    </ion-nav-back-button>
+</ion-nav-bar>
+
+<ion-nav-view></ion-nav-view>
 
 <script src="lib/ionic/js/ionic.bundle.js"></script>
 <script src="cordova.js"></script>
 <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+<script src="js/firebase.config.js"></script>
 <script src="js/app.bundle.js"></script>
 </body>
 </html>
