--- a/SocialStrata/www/index.html
+++ b/SocialStrata/www/index.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title>Social Strata</title>
     <link href="css/ionic.app.css" rel="stylesheet">
 </head>
+
 <body ng-app="app">
 
-<ion-nav-bar class="bar-stable">
-    <ion-nav-back-button>
-    </ion-nav-back-button>
-</ion-nav-bar>
+    <ion-nav-bar class="bar-balanced">
+        <ion-nav-back-button>
+        </ion-nav-back-button>
+    </ion-nav-bar>
 
-<ion-nav-view></ion-nav-view>
+    <ion-nav-view></ion-nav-view>
 
-<script src="lib/ionic/js/ionic.bundle.js"></script>
-<script src="cordova.js"></script>
-<script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
-<script src="js/app.bundle.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
+    <script src="cordova.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
+    <script src="js/app.bundle.js"></script>
 </body>
+
 </html>
