--- a/SocialStrata/www/index.html
+++ b/SocialStrata/www/index.html
@@ -17,8 +17,8 @@
 
     <ion-nav-view></ion-nav-view>
 
+    <script src="lib/lodash.min.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="cordova.js"></script>
     <script src="https://www.gstatic.com/firebasejs/live/3.0/firebase.js"></script>
     <script src="js/app.bundle.js"></script>
 </body>
